# desktop

./: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
public/: splashscreen.html
src/: App.css  App.tsx  main.tsx  routes.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: broadcast.rs  conf.rs  custom_error_handler.rs  errors.rs  main-2.rs  main-backup.rs  main.rs  mainBackup.17.01.23.rs  routes.rs  utils.rs  ws.rs
src-tauri/src/app/: cmd.rs  fs_extra.rs  menu.rs  mod.rs  setup.rs  window.rs
src-tauri/src/legacy-code/: main-03-01-03.rs  main.13.02.23.rs
src-tauri/src/web/public/: main.css
src-tauri/src/web/templates/: compliment.html
src-tauri/static/templates/: compliment.html  index.html
src/commands/: index.ts
src/components/: AppBackup.tsx
src/components/app/: ErrorFallback.tsx  ThemeContext.tsx  index.ts
src/components/form-elements/: ThemeToggle.tsx
src/components/layout/: AppLoader.tsx  body.tsx  container.tsx  data.tsx  index.ts  menu.tsx  sidebar.tsx
src/contexts/: ThemeContext.tsx
src/redux/: store.ts
src/redux/slices/: configSlice.ts  connectionsSlice.ts  index.ts
src/screens/: Home.tsx  preferences.tsx
src/types/: config.ts  enums.ts
src/utils/: index.ts
