[package]
name = "dev-all-day"
version = "0.0.0"
description = "A true universal debugging tool"
authors = ["Garikai Jenje"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
#actix server
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-rt = "2.7.0"
actix-cors = "0.6.4"
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
json = "0.12"
futures = "0.3.5"
bytes = "1.3.0"
gloo-console = "0.2.3"
#sse
actix-web-lab = "0.18.9"
parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }

# ... or we might need to opt into certain "features" that aren't
# included by default
handlebars = { version = "4.3.5", features = ["dir_source"] }

local-ip = "0.1"
portpicker = "0.1"
port_scanner = "0.1.5"
derive_more = "0.99.17"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
